--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -22,7 +22,7 @@
         justify-content: space-around;
         align-items: center;
         width: 100%;
-        height: 100vh;
+        /* height: 100vh; */
 
         font-family: system-ui;
         background-color: #1d1d1d;
@@ -66,6 +66,13 @@
 
       footer img {
         height: 40px;
+      }
+
+      .horizontal-line {
+        width: 100%;
+        height: 1px;
+        margin: 20px 0;
+        background-color: #ccc;
       }
     </style>
   </head>
