--- a/views/partials/players.ejs
+++ b/views/partials/players.ejs
@@ -1,14 +1,18 @@
 <section>
   <div class="playersHeader">
-    <h3>( Jugadores online: <span id="onlinePlayers">2</span> )</h3>
     <h2>Tabla de Posiciones</h2>
     <ol id="players"></ol>
   </div>
 
-  <button
-    id="logout"
-    class="btn"
-  >
-    Cerrar Sesión
-  </button>
+  <div>
+    <hr class="horizontal-line" />
+    <h3>( Jugadores online: <span id="onlinePlayers">2</span> )</h3>
+
+    <button
+      id="logout"
+      class="btn"
+    >
+      Cerrar Sesión
+    </button>
+  </div>
 </section>
