updated rules on click

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,6 +29,10 @@
         puntaje que obtiene por cada pelota golpeada aumenta.
       </p>
       <p>
+        Pero cuidado! Si el jugador no golpea una pelota, su combo se reinicia a 0,
+        y el puntaje se restara por 50 puntos.
+      </p>
+      <p>
         Busca ser el primero en la tabla de posiciones, acumulando la mayor
         cantidad de puntos y combos. ¿Lograras ser el mejor?
       </p>
