fix: scoreboard order, and styles on that section

--- a/views/partials/players.ejs
+++ b/views/partials/players.ejs
@@ -1,7 +1,7 @@
-<section>
+<section id="players">
   <div class="playersHeader">
     <h2>Tabla de Posiciones</h2>
-    <ol id="players"></ol>
+    <ol id="players-list"></ol>
   </div>
 
   <div>
