--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -32,7 +32,7 @@
   main {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     width: 100%;
     padding: 1em 2em;
   }
@@ -43,19 +43,8 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     padding: 1em 2em;
-  }
-
-  section.playersHeader {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    padding: 1em 2em;
-    background-color: #1d1d1d;
   }
 
   section h2 {
@@ -66,6 +55,7 @@
     letter-spacing: 0.1em;
     margin: 5px 0 15px 0;
     text-decoration: underline;
+    text-align: center;
   }
 
   section div {
@@ -363,7 +353,7 @@
       socket.on('update', ({ newBall, players }) => {
         game.addBall(newBall)
 
-        const OL_PLAYERS = document.querySelector('#players')
+        const OL_PLAYERS = document.querySelector('#players-list')
         OL_PLAYERS.innerHTML = ''
         players.forEach((player, index) => {
           const li = document.createElement('li')
