--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -119,7 +119,7 @@
     gap: 20px;
   }
 
-  ol {
+  #players-list {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -134,19 +134,34 @@
     gap: 10px;
   }
 
-  ol li {
+  #players-list li {
+    display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     padding: 0 10px;
   }
 
-  li span.playerScoreTotal {
+  #players-list li > span {
+    display: flex;
+    flex: 1;
+  }
+
+  #players-list li > p {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  span.playerScoreTotal {
     color: #0f0;
   }
 
-  li span.playerScoreMaxCombo {
-    color: #00f;
+  span.playerScoreMaxCombo {
+    color: #ff0;
+  }
+
+  span.playerScoreTotal + span.playerScoreMaxCombo {
+    margin-left: 10px;
   }
 
   .modal {
@@ -358,10 +373,14 @@
         players.forEach((player, index) => {
           const li = document.createElement('li')
           li.innerHTML = `
-            ${player.nickname}: 
-            <span class="playerScoreTotal">${player.totalScore}</span> -
-            <span class="playerScoreMaxCombo">${player.maxCombo}</span>
+          <span>${index + 1}. ${player.nickname}:</span>
           `
+          const p = document.createElement('p')
+          p.innerHTML = `
+            <span class="playerScoreTotal">${player.totalScore}</span>
+            <span class="playerScoreMaxCombo">(${player.maxCombo})</span>
+          `
+          li.appendChild(p)
           OL_PLAYERS.appendChild(li)
         })
       })
